<resources>
    <string name="app_name">Sell Cars</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="car_table">car(s) Table</string>
    <string name="register">Register your vehicle</string>
    <string name="brand">Brand:</string>
    <string name="model">Model:</string>
    <string name="color">Color:</string>
    <string name="v_brand">Enter the vehicle brand</string>
    <string name="v_model">Inform the vehicle model</string>
    <string name="value">inform the value of the vehicle</string>
    <string name="phone">inform your phone</string>
    <string name="entered">I confirm that the data entered is correct.</string>
    <string name="save">SAVE</string>
    <string name="atualized">Updated list</string>
    <string name="complete">Fill in all fields!</string>
    <string name="text1">Here you really sell! </string>
    <string name="btnRegister">Register</string>
    <string name="enter">Enter</string>
    <string name="add">Add Car</string>
    <string name="logout">Logout</string>
    <string name="anuncios">See advertisements</string>
    <string name="danger">Only the advertiser can edit or delete ad!</string>

    <string-array name="colors">
        <item name="option_color">Selection Color</item>
        <item name="white">White</item>
        <item name="black">Black</item>
        <item name="gray">Gray</item>
        <item name="green">Green</item>
        <item name="red">Red</item>
        <item name="blue">Blue</item>
    </string-array>
</resources>